fix: Change breadcrumb not to take extra width
Apply box-sizing for breadcrumb so it doesn't take additional extra width and show horizontal scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ nav a {
     font-size: 17px;
     margin: 0;
     width: 100%;
+    box-sizing: border-box;
 }
 
 /* Display list items side by side */
